# experiments

./: .gitignore  README.md  pyproject.toml
experiments/knowing_the_measure/: knowing_the_measure.py  qualitative_xent.py
experiments/truth/: comparisons.py  truth.py  truthtypes.py
src/shared/: abstract_worker.py  model_manager.py  model_utils.py  qualitative_xent_tests.py  types.py  xent_tests.py
